--- a/app/Resources/views/abonnes/show.html.twig
+++ b/app/Resources/views/abonnes/show.html.twig
@@ -32,7 +32,11 @@
             </tr>
             <tr>
                 <th>Niveau</th>
-                <td>{{ abonne.niveau }}</td>
+                <td>{{ abonne.niveau.nom }}</td>
+            </tr>
+            <tr>
+                <th>Faculte</th>
+                <td>{{ abonne.faculte.nom }}</td>
             </tr>
             <tr>
                 <th>Password</th>
