--- a/app/Resources/views/messages/new.html.twig
+++ b/app/Resources/views/messages/new.html.twig
@@ -6,7 +6,7 @@
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input class="btn btn-primary" style="margin-top: 10px" type="submit" value="Create" />
+        <input class="btn btn-primary" style="margin-top: 10px" type="submit" value="Envoyer" />
     {{ form_end(form) }}
 
 {% endblock %}
