--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,6 +13,14 @@
     <title>Infocampus</title>
 
     <link rel="stylesheet" href="{{ asset('bundles/infocampus/css/bootstrap.min.css') }}">
+    <style>
+        .dropdown-toggle {
+            background: transparent;
+            border: none;
+            margin-top: 9px;
+            color: white;
+        }
+    </style>
 
 </head>
 
@@ -31,10 +39,30 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="{{ path('abonnes_index') }}">Abonnes</a></li>
-                <li><a href="{{ path('messages_index') }}">Messages</a></li>
-                <li><a href="{{ path('facultes_index') }}">Facultes</a></li>
-                <li><a href="{{ path('structures_index') }}">Structures</a></li>
+                <li>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="menu2" data-toggle="dropdown">Administration
+                            <span class="caret"></span></button>
+                        <ul class="dropdown-menu list-group" role="menu" aria-labelledby="menu2">
+                            <li class="list-item"><a href="{{ path('abonnes_index') }}">Abonnes</a></li>
+                            <li class="divider"></li>
+                            <li class="list-item"><a href="{{ path('facultes_index') }}">Facultes</a></li>
+                            <li class="divider"></li>
+                            <li class="list-item"><a href="{{ path('structures_index') }}">Structures</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Envoie Message
+                            <span class="caret"></span></button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                            <li role="presentation"><a role="menuitem" href="{{ path('messages_new') }}">Infocampus</a></li>
+                            <li class="divider"></li>
+                            <li role="presentation"><a role="menuitem" href="{{ path('message_infocampusplus') }}">Infocampus plus</a></li>
+                        </ul>
+                    </div>
+                </li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -48,9 +76,23 @@
         {% endfor %}
         {% block body %}{% endblock %}
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <hr>
+    <div class="row">
+        <div class="col-xs-12">
+            <footer>
+                <p>&copy; Copyright Sanarsoft 2017</p>
+            </footer>
+        </div>
+    </div>
 
 </div>
 
+<script src="{{ asset('bundles/infocampus/js/jquery-3.2.0.min.js') }}"></script>
 <script src="{{ asset('bundles/infocampus/js/bootstrap.min.js') }}"></script>
 
 {% block javascripts %}{% endblock %}
